# sql2graph

./: README.md  graph_generator.py  pyproject.toml  sql_to_registry.py
dbscripts/: sample_sql_schema.sql
graphs/: inferred_edges.json  inferred_graph.graphml
utils/: build_registry.py  ddl_to_schema.py  enrich_registry.py  sanitize.py  streamlit_enrich.py  table_selector.py
