[project]
name = "sql2graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=4.0.0,<5.0.0",
    "dotenv>=0.9.9",
    "jupyterlab>=4.5.4",
    "lxml>=6.0.2",
    "networkx>=3.6.1",
    "pandas>=3.0.1",
    "pyodbc>=5.3.0",
    "python-levenshtein>=0.27.3",
    "rapidfuzz>=3.14.3",
    "sqlparse>=0.5.5",
    "streamlit>=1.19.0",
    "typing>=3.10.0.0",
]
